Attempt to fix contrast on visited links

--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -2,5 +2,5 @@
 @dark-gray: #333;
 @medium-gray: #666;
 @light-gray: #777;
-@blue: #2562dc;
-@light-blue: lighten(@blue, 20%);
+@blue: #1e53bc;
+@light-blue: lighten(@blue, 10%);
