--- a/assets/css/mobile.less
+++ b/assets/css/mobile.less
@@ -9,10 +9,11 @@
   }
 
   .content {
-    padding: 0 1rem;
+    margin: 0 1rem;
   }
 
   footer {
+    margin: 1rem 1rem 2rem 1rem;
     flex-direction: column;
   }
 
@@ -39,6 +40,11 @@
     justify-content: center;
     min-width: 3rem;
   }
+
+
+
+
+
 
 
 
